# Bio_agents_Evaluation

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  eval1_dataset_and_agent_run.ipynb  pyproject.toml
.github/workflows/: ci.yml
configs/: biomni_eval1_full.yaml  biomni_eval1_smoke.yaml  biomni_smoke.yaml  full_benchmark.yaml  quick_smoke.yaml  robin_smoke.yaml
data_subset/: create_eval1_subset.ipynb  output_biomni.csv  output_biomni_qwen3.csv  output_edison.csv  output_edison_tiago.csv  output_phylo.csv  output_robin.csv  output_robin_gemma312b_cloud.csv  project_subset.csv  project_subset_10.csv  run_agents_on_subset.ipynb  run_biomni_on_subset.ipynb
notebooks/: 01_run_task.ipynb  02_run_benchmark.ipynb  03_run_eval1.ipynb  04_score_external_outputs.ipynb  placeholder.ipynb
pipelines/: run_benchmark.py  run_biomni_on_subset.py  run_eval1.py  run_robin_on_subset.py  run_task.py  score_outputs.py
results/biomni_qwen3_scored/: results.jsonl
results/biomni_scored/: results.jsonl
results/edison_scored/: results.jsonl
results/phylo_scored/: results.jsonl
results/robin_gemma312b_cloud_scored/: results.jsonl
src/bio_agents/: __init__.py  config.py
src/bio_agents/evaluation/: __init__.py  eval1_runner.py  runner.py  standalone_scorer.py
src/bio_agents/evaluation/metrics/: __init__.py
src/bio_agents/frameworks/: __init__.py  base.py
src/bio_agents/frameworks/biomni/: __init__.py  runner.py
src/bio_agents/frameworks/robin/: __init__.py  lite.py  rag_runner.py  runner.py
src/bio_agents/models/: __init__.py  registry.py
src/bio_agents/tasks/: __init__.py  base.py
src/bio_agents/tasks/biomni_eval1/: __init__.py  task.py
src/bio_agents/tasks/drug_discovery/: __init__.py  assay_generation.py  candidate_ranking.py
src/bio_agents/tools/: __init__.py  pubmed.py
tests/unit/: test_standalone_scorer.py
(+9 files in other folders)
